navigration,header added in bestellen.html

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                   <li>
                     <a
                       class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[rgb(255, 255, 255)]"
-                      href="#"
+                      href="./index.html"
                       >Start</a
                     >
                   </li>
                   <li>
                     <a
                       class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[rgb(255, 255, 255)]"
-                      href="#"
+                      href="./bestellen.html"
                       >Bestellen</a
                     >
                   </li>
@@ -86,7 +86,7 @@
 
             <!-- mobile menu -->
             <div
-              class="mobile_menu hidden fixed w-[90%] md:hidden bg-[#00000080] text-center"
+              class="mobile_menu hidden z-[999] fixed w-[90%] md:hidden bg-[#00000080] text-center"
             >
               <ul class="md:flex">
                 <li class="py-2">
@@ -99,7 +99,7 @@
                 <li class="py-2">
                   <a
                     class="py-2 uppercase text-xs font-semibold tracking-[2px] text-[rgb(255, 255, 255)]"
-                    href="#"
+                    href="./bestellen.html"
                     >Bestellen</a
                   >
                 </li>
