in large screen navigration done

--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
                   <li>
                     <a
                       class="px-5 uppercase text-xs font-semibold tracking-[2px]"
-                      href="#"
+                      href="./software.html"
                       >software</a
                     >
                   </li>
                   <li>
                     <a
                       class="px-5 uppercase text-xs font-semibold tracking-[2px]"
-                      href="#"
+                      href="./vavoo.html"
                       >vavoo pro</a
                     >
                   </li>
                   <li>
                     <a
                       class="px-5 uppercase text-xs font-semibold tracking-[2px]"
-                      href="#"
+                      href="./support.html"
                       >support</a
                     >
                   </li>
