--- a/bestellen.html
+++ b/bestellen.html
@@ -54,21 +54,21 @@
               <li>
                 <a
                   class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
-                  href="#"
+                  href="./software.html"
                   >software</a
                 >
               </li>
               <li>
                 <a
                   class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
-                  href="#"
+                  href="./vavoo.html"
                   >vavoo pro</a
                 >
               </li>
               <li>
                 <a
                   class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
-                  href="#"
+                  href="./support.html"
                   >support</a
                 >
               </li>
