--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <ul class="md:flex">
                   <li>
                     <a
-                      class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[rgb(255, 255, 255)]"
+                      class="px-5 uppercase active_color text-xs font-semibold tracking-[2px] text-[rgb(255, 255, 255)]"
                       href="./index.html"
                       >Start</a
                     >
@@ -91,7 +91,7 @@
               <ul class="md:flex">
                 <li class="py-2">
                   <a
-                    class="uppercase text-xs font-semibold tracking-[2px] text-[rgb(255, 255, 255)]"
+                    class="uppercase active_color text-xs font-semibold tracking-[2px] text-[rgb(255, 255, 255)]"
                     href="#"
                     >Start</a
                   >
