--- a/vavoo.html
+++ b/vavoo.html
@@ -60,7 +60,7 @@
               </li>
               <li>
                 <a
-                  class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 active_color uppercase text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./vavoo.html"
                   >vavoo pro</a
                 >
