--- a/support.html
+++ b/support.html
@@ -67,7 +67,7 @@
               </li>
               <li>
                 <a
-                  class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 active_color uppercase text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./support.html"
                   >support</a
                 >
