--- a/bestellen.html
+++ b/bestellen.html
@@ -140,9 +140,47 @@
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper">
     <!-- Slides -->
-    <div class="swiper-slide">Slide 1</div>
-    <div class="swiper-slide">Slide 2</div>
-    <div class="swiper-slide">Slide 3</div>
+    <div class="swiper-slide">
+     <div class="text-center mt-[6%]">
+      <span class="text-[#fff]">
+        <i class="fa-solid text-5xl fa-quote-left"></i>
+      </span>
+      <p
+        class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
+      >
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Necessitatibus, libero?
+      </p>
+      <span class="text-[#fff] font-semibold">Mamun Ethan</span>
+     </div>
+    </div>
+    <div class="swiper-slide"> <div class="text-center mt-[6%]">
+      <span class="text-[#fff]">
+        <i class="fa-solid text-5xl fa-quote-left"></i>
+      </span>
+      <p
+        class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
+      >
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Necessitatibus, libero?
+        <br>
+        sit amet consectetur adipisicing elit.
+        Necessitatibus, libero?
+      </p>
+      <span class="text-[#fff] font-semibold">Emon Talukder</span>
+     </div></div>
+    <div class="swiper-slide"> <div class="text-center mt-[6%]">
+      <span class="text-[#fff]">
+        <i class="fa-solid text-5xl fa-quote-left"></i>
+      </span>
+      <p
+        class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
+      >
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Necessitatibus, libero?
+      </p>
+      <span class="text-[#fff] font-semibold">jon doe</span>
+     </div></div>
     ...
   </div>
   <!-- If we need pagination -->
