--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+        <!-- swipper.js css -->
+        <link rel="stylesheet" href="./src/swiper-bundle.min.css">
     <!-- css file -->
     <link rel="stylesheet" href="src/main.css" />
   </head>
@@ -144,7 +146,7 @@
                   class="button flex flex-col md:flex-row justify-center text-[#fff]"
                 >
                   <a
-                    class="border-2 uppercase py-2 px-5 text-[12px] font-semibold tracking-[2px] mb-3 md:mb-0 md:mr-5"
+                    class="border-2 uppercase hover:text-[#000] hover:bg-[#fff] py-2 px-5 text-[12px] font-semibold tracking-[2px] mb-3 md:mb-0 md:mr-5"
                     href="#"
                     >Mehr erfahren</a
                   >
@@ -187,25 +189,68 @@
       </div>
     </section>
 
-    <!-- tesimonials -->
-    <section class="py-5 relative">
-      <div class="tesimonals_bg">
-        <div class="testimonials_overly h-full bg-[#0000009e]">
-          <div class="testi text-center absolute">
-            <span class="text-[#fff]">
-              <i class="fa-solid text-5xl fa-quote-left"></i>
-            </span>
-            <p
-              class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
-            >
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Necessitatibus, libero?
-            </p>
-            <span class="text-[#fff] font-semibold">Mamun Ethan</span>
-          </div>
-        </div>
-      </div>
-    </section>
+   <!-- tesimonials -->
+   <section class="py-5 relative">
+    <div class="tesimonals_bg">
+      <div class="testimonials_overly h-full bg-[#0000009e]">
+
+   <!-- Slider main container -->
+<div class="swiper h-full">
+<!-- Additional required wrapper -->
+<div class="swiper-wrapper">
+  <!-- Slides -->
+  <div class="swiper-slide">
+   <div class="text-center mt-[6%]">
+    <span class="text-[#fff]">
+      <i class="fa-solid text-5xl fa-quote-left"></i>
+    </span>
+    <p
+      class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
+    >
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Necessitatibus, libero?
+    </p>
+    <span class="text-[#fff] font-semibold">Mamun Ethan</span>
+   </div>
+  </div>
+  <div class="swiper-slide"> <div class="text-center mt-[6%]">
+    <span class="text-[#fff]">
+      <i class="fa-solid text-5xl fa-quote-left"></i>
+    </span>
+    <p
+      class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
+    >
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Necessitatibus, libero?
+      <br>
+      sit amet consectetur adipisicing elit.
+      Necessitatibus, libero?
+    </p>
+    <span class="text-[#fff] font-semibold">Emon Talukder</span>
+   </div></div>
+  <div class="swiper-slide"> <div class="text-center mt-[6%]">
+    <span class="text-[#fff]">
+      <i class="fa-solid text-5xl fa-quote-left"></i>
+    </span>
+    <p
+      class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
+    >
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Necessitatibus, libero?
+    </p>
+    <span class="text-[#fff] font-semibold">jon doe</span>
+   </div></div>
+  ...
+</div>
+<!-- If we need pagination -->
+<div class="swiper-pagination"></div>
+
+
+
+<!-- If we need scrollbar -->
+<div class="swiper-scrollbar text-[#fff]"></div>
+</div>
+  </section>
 
     <!-- vavoo section  -->
     <section class="container mx-auto mt-24 mb-24">
@@ -452,6 +497,8 @@
         </p>
       </div>
     </footer>
+      <!-- swipper.js script -->
+      <script src="./src/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
