small issues fixed

--- a/bestellen.html
+++ b/bestellen.html
@@ -190,34 +190,34 @@
 
     <!-- tesimonials -->
     <section class="py-5 relative">
-      <div class="tesimonals_bg">
-        <div class="testimonials_overly h-full bg-[#0000009e]">
+      <div class="">
+        <div class="testimonials_overly h-full bg-[#fff]">
 
      <!-- Slider main container -->
 <div class="swiper h-full">
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper">
     <!-- Slides -->
-    <div class="swiper-slide">
-     <div class="text-center mt-[6%]">
-      <span class="text-[#fff]">
-        <i class="fa-solid text-5xl fa-quote-left"></i>
+    <div class="swiper-slide pb-10">
+     <div class="text-center pb-10 mt-[6%]">
+      <span class="text-[#000]">
+        <i class="fa-solid text-5xl fa-quote-right"></i>
       </span>
       <p
-        class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
+        class="tesimonials_des text-[#333] font-light text-base py-10 leading-6 tracking-[2px]"
       >
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Necessitatibus, libero?
       </p>
-      <span class="text-[#fff] font-semibold">Mamun Ethan</span>
+      <span class="text-[#000] font-semibold">Mamun Ethan</span>
      </div>
     </div>
     <div class="swiper-slide"> <div class="text-center mt-[6%]">
-      <span class="text-[#fff]">
-        <i class="fa-solid text-5xl fa-quote-left"></i>
+      <span class="text-[#000]">
+        <i class="fa-solid text-5xl fa-quote-right"></i>
       </span>
       <p
-        class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
+        class="tesimonials_des text-[#000] font-light text-base py-10 leading-6 tracking-[2px]"
       >
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Necessitatibus, libero?
@@ -225,29 +225,27 @@
         sit amet consectetur adipisicing elit.
         Necessitatibus, libero?
       </p>
-      <span class="text-[#fff] font-semibold">Emon Talukder</span>
+      <span class="text-[#000] font-semibold">Emon Talukder</span>
      </div></div>
     <div class="swiper-slide"> <div class="text-center mt-[6%]">
-      <span class="text-[#fff]">
-        <i class="fa-solid text-5xl fa-quote-left"></i>
+      <span class="text-[#000]">
+        <i class="fa-solid text-5xl fa-quote-right"></i>
       </span>
       <p
-        class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
+        class="tesimonials_des text-[#000] font-light text-base py-10 leading-6 tracking-[2px]"
       >
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Necessitatibus, libero?
       </p>
-      <span class="text-[#fff] font-semibold">jon doe</span>
+      <span class="text-[#000] font-semibold">jon doe</span>
      </div></div>
     ...
   </div>
-  <!-- If we need pagination -->
-  <div class="swiper-pagination"></div>
+  
 
 
 
-  <!-- If we need scrollbar -->
-  <div class="swiper-scrollbar text-[#fff]"></div>
+  
 </div>
     </section>
 
