--- a/index.html
+++ b/index.html
@@ -129,24 +129,24 @@
               </ul>
             </div>
             <div class="hero">
-              <div class="content mt-[1rem] md:mt-20 text-center">
+              <div class="content pt-[45px]  md:mt-20 text-center">
                 <h5
-                  class="content_sub_title text-base text-[#fff] font-semibold tracking-[2px]"
+                  class="content_sub_title pb-4 text-base text-[#fff] font-semibold tracking-[2px]"
                 >
                   VAVOO MACHT DAS LEBEN EINFACH.
                 </h5>
                 <h1
-                  class="main_title md:text-[43px] text-[35px] font-semibold text-[#fff] tracking-[2px]"
+                  class="main_title md:text-[43px] text-[20px] font-semibold text-[#fff] leading-10 tracking-[2px]"
                 >
                   FILME & SERIEN
                   <br />
                   AM FERNSEHER GENIESSEN
                 </h1>
                 <div
-                  class="button flex flex-col md:flex-row justify-center text-[#fff]"
+                  class="button flex mt-8 flex-col md:flex-row justify-center text-[#fff]"
                 >
                   <a
-                    class="border-2 uppercase hover:text-[#000] hover:bg-[#fff] py-2 px-5 text-[12px] font-semibold tracking-[2px] mb-3 md:mb-0 md:mr-5"
+                    class="border-2  uppercase hover:text-[#000] hover:bg-[#fff] py-2 px-5 text-[12px] font-semibold tracking-[2px] mb-3 md:mb-0 md:mr-5"
                     href="#"
                     >Mehr erfahren</a
                   >
@@ -202,7 +202,7 @@
   <div class="swiper-slide">
    <div class="text-center mt-[6%]">
     <span class="text-[#fff]">
-      <i class="fa-solid text-5xl fa-quote-left"></i>
+      <i class="fa-solid text-5xl fa-quote-right"></i>
     </span>
     <p
       class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
@@ -215,7 +215,7 @@
   </div>
   <div class="swiper-slide"> <div class="text-center mt-[6%]">
     <span class="text-[#fff]">
-      <i class="fa-solid text-5xl fa-quote-left"></i>
+      <i class="fa-solid text-5xl fa-quote-right"></i>
     </span>
     <p
       class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
@@ -230,7 +230,7 @@
    </div></div>
   <div class="swiper-slide"> <div class="text-center mt-[6%]">
     <span class="text-[#fff]">
-      <i class="fa-solid text-5xl fa-quote-left"></i>
+      <i class="fa-solid text-5xl fa-quote-right"></i>
     </span>
     <p
       class="tesimonials_des text-[#ddd] font-light text-base py-10 leading-6 tracking-[2px]"
