--- a/software.html
+++ b/software.html
@@ -126,7 +126,98 @@
         </div>
       </div>
     </section>
+    <!-- software section  -->
+    <section class="align-middlemt-10 mb-10 pt-10 pb-5 bg-[#f7f7f7]">
+      <h1
+        class="px-4 font-semibold hover:text-orange-400 duration-300 text-[26px] text-main text-center font-semibold tracking-[4px] mb-7"
+      >
+        <a href="software.html">SOFTWARE</a>
+        <span class="text-orange-500 text-2xl">.</span>
+      </h1>
+    </section>
 
+    <!-- software peragraph -->
+    <section class="container mx-auto">
+      <div class="mb-10">
+        <p
+          class="px-4 text-[15px] md:w-[700px] lg:w-[750px] lg:text-[18px] text-justify m-auto leading-7 text-gray-500"
+        >
+          Die VAVOO APP ist kostenlos und steht jedem zum Download bereit. Die
+          Software ist äusserst ressourcensparend und läuft somit auch auf
+          vergleichsweise schwacher oder älterer Hardware. Unsere Entwickler
+          sind stets bemüht die VAVOO APP auf weiteren Endgeräten zur Verfügung
+          zu stellen.
+        </p>
+        <h1
+          class="px-4 text-[20px] mt-10 text-main text-center font-semibold tracking-[4px] mb-7"
+        >
+          WÄHLE JETZT EIN BETRIEBSSYSTEM AUS<span
+            class="text-orange-500 text-2xl"
+            >.</span
+          >
+        </h1>
+      </div>
+
+      <!-- andorid part -->
+      <div class="col-span-1 lg:grid grid-rows lg:h-[250px]">
+        <div class="lg:flex gap-20 md:justify-center">
+          <div
+            class="justify-center mb-14 text-center hover:text-orange-500 duration-300 c"
+          >
+            <a href="">
+              <img
+                src="./src/img/android.png"
+                alt=""
+                class="m-auto w-[100px] lg:w-[160px]"
+              />
+              <h5 class="capitalize mt-2">andorid</h5>
+            </a>
+          </div>
+          <div
+            class="justify-center mb-14 text-center hover:text-orange-500 duration-300 c"
+          >
+            <a href="">
+              <img
+                src="./src/img/win32.png"
+                alt=""
+                class="m-auto w-[100px] lg:w-[160px]"
+              />
+              <h5 class="capitalize mt-2">windows</h5>
+            </a>
+          </div>
+          <div
+            class="justify-center mb-14 text-center hover:text-orange-500 duration-300 c"
+          >
+            <a href="">
+              <img
+                src="./src/img/osx.png"
+                alt=""
+                class="m-auto w-[100px] lg:w-[160px]"
+              />
+              <h5 class="capitalize mt-2">MacOs</h5>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <p
+          class="px-4 text-[15px] mb-10 md:w-[700px] lg:w-[750px] lg:text-[18px] text-justify m-auto leading-7 text-gray-500"
+        >
+          Nachdem Du die VAVOO APP installiert hast, kannst Du die URL zu Deinem
+          gewünschten Bundle angeben. Die Software richtet sich dann komplett
+          selbstständig ein und ist sofort einsatzbereit.
+        </p>
+        <p
+          class="px-4 text-[15px] mb-10 md:w-[700px] lg:w-[750px] lg:text-[18px] hover:text-orange-400 text-justify m-auto leading-7 text-gray-500"
+        >
+          <a href=""
+            >Für die beste User-Experince empfehlen wir Dir VAVOO. Die
+            revolutionäre TV-BOX.</a
+          >
+        </p>
+      </div>
+    </section>
     <!-- footer section -->
 
     <footer class="px-20 pt-14 bg-[#f7f7f7]">
