hero section fixed in small device

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!-- header &  hero -->
     <section class="header_hero">
-      <div class="hero_bg_img">
+      <div class="hero_bg_img h-[60vh] md:h-[100vh]">
         <div class="img-overly h-full bg-[#000000c2]">
           <div class="container mx-auto px-5">
             <header
@@ -43,35 +43,35 @@
                 <ul class="md:flex">
                   <li>
                     <a
-                      class="px-5 uppercase active_color text-xs font-semibold tracking-[2px] text-[rgb(255, 255, 255)]"
+                      class="px-5 uppercase hover:text-orange-400 active_color text-xs font-semibold tracking-[2px] text-[rgb(255, 255, 255)]"
                       href="./index.html"
                       >Start</a
                     >
                   </li>
                   <li>
                     <a
-                      class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[rgb(255, 255, 255)]"
+                      class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[rgb(255, 255, 255)]"
                       href="./bestellen.html"
                       >Bestellen</a
                     >
                   </li>
                   <li>
                     <a
-                      class="px-5 uppercase text-xs font-semibold tracking-[2px]"
+                      class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px]"
                       href="./software.html"
                       >software</a
                     >
                   </li>
                   <li>
                     <a
-                      class="px-5 uppercase text-xs font-semibold tracking-[2px]"
+                      class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px]"
                       href="./vavoo.html"
                       >vavoo pro</a
                     >
                   </li>
                   <li>
                     <a
-                      class="px-5 uppercase text-xs font-semibold tracking-[2px]"
+                      class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px]"
                       href="./support.html"
                       >support</a
                     >
