--- a/software.html
+++ b/software.html
@@ -39,35 +39,35 @@
             <ul class="md:flex">
               <li>
                 <a
-                  class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./index.html"
                   >Start</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 hover:text-orange-400 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./bestellen.html"
                   >Bestellen</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 active_color uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 hover:text-orange-400 active_color uppercase text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./software.html"
                   >software</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 hover:text-orange-400 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./vavoo.html"
                   >vavoo pro</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 hover:text-orange-400 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./support.html"
                   >support</a
                 >
@@ -129,7 +129,7 @@
     <!-- software section  -->
     <section class="align-middlemt-10 mb-10 pt-10 pb-5 bg-[#f7f7f7]">
       <h1
-        class="px-4 font-semibold hover:text-orange-400 duration-300 text-[26px] text-main text-center font-semibold tracking-[4px] mb-7"
+        class="px-4 hover:text-orange-400 duration-300 text-[26px] text-main text-center font-semibold tracking-[4px] mb-7"
       >
         <a href="software.html">SOFTWARE</a>
         <span class="text-orange-500 text-2xl">.</span>
