--- a/support.html
+++ b/support.html
@@ -39,35 +39,35 @@
             <ul class="md:flex">
               <li>
                 <a
-                  class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./index.html"
                   >Start</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./bestellen.html"
                   >Bestellen</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./software.html"
                   >software</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 hover:text-orange-400 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./vavoo.html"
                   >vavoo pro</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 active_color uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 hover:text-orange-400 active_color uppercase text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./support.html"
                   >support</a
                 >
