login menu,login page added

--- a/software.html
+++ b/software.html
@@ -72,6 +72,13 @@
                   >support</a
                 >
               </li>
+              <li>
+                <a
+                  class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
+                  href="#"
+                  >login</a
+                >
+              </li>
             </ul>
           </nav>
 
@@ -120,6 +127,13 @@
                 class="px-5 uppercase text-xs font-semibold tracking-[2px]"
                 href="./support.html"
                 >support</a
+              >
+            </li>
+            <li>
+              <a
+                class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
+                href="#"
+                >login</a
               >
             </li>
           </ul>
