--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
                       >support</a
                     >
                   </li>
+                  <li>
+                    <a
+                      class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#fff]"
+                      href="#"
+                      >login</a
+                    >
+                  </li>
                 </ul>
               </nav>
 
@@ -124,6 +131,13 @@
                     class="px-5 uppercase text-xs font-semibold tracking-[2px]"
                     href="#"
                     >support</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#fff]"
+                    href="#"
+                    >login</a
                   >
                 </li>
               </ul>
