--- a/login.html
+++ b/login.html
@@ -12,9 +12,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
-      <!-- swipper.js css -->
-      <link rel="stylesheet" href="./src/swiper-bundle.min.css">
     <!-- css file -->
     <link rel="stylesheet" href="src/main.css" />
   </head>
@@ -42,42 +39,42 @@
             <ul class="md:flex">
               <li>
                 <a
-                  class="px-5 uppercase  hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./index.html"
                   >Start</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 active_color hover:text-orange-40 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./bestellen.html"
                   >Bestellen</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 uppercase text-xs hover:text-orange-400 font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./software.html"
                   >software</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 active_color hover:text-orange-400 uppercase text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./vavoo.html"
                   >vavoo pro</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 uppercase text-xs hover:text-orange-400 font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
                   href="./support.html"
                   >support</a
                 >
               </li>
               <li>
                 <a
-                  class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]"
+                  class="px-5 uppercase hover:text-orange-400 text-xs font-semibold tracking-[2px] text-[#000]""
                   href="#"
                   >login</a
                 >
@@ -143,126 +140,7 @@
         </div>
       </div>
     </section>
-
-
-    
-    <!-- software section  -->
-    <section class=" align-middle pt-10 pb-3 mb-10  bg-[#f7f7f7]">
-      <h1 class="px-4 font-semibold hover:text-orange-400 duration-300 text-[26px] text-main text-center font-semibold tracking-[4px] mb-7" >
-      <a href="bestellen.html" >DIE REVOLUTIONÄRE TV-BOX</a> <span class="text-orange-500 text-2xl">.</span>
-      </h1>
-    </section>
-
-
-<div class="bg-[#EFFFEF] mb-10 pt-4 pb-4">
-        <p class="px-4 text-[15px]   md:w-[700px] lg:w-[750px] lg:text-[18px] hover:text-orange-400 text-justify m-auto leading-7 text-gray-500">
-            <a href="">Die VAVOO APP ist jetzt komplett kostenlos für Windows, Mac und Android erhältlich.</a>
-            </p>
-</div>
-  
-<!-- icon section -->
-<section class="container mx-auto ">
-    <div class="col-span-1 lg:flex gap-32 justify-center">
-        <div class="text-center mb-10">
-            <i class="fa fa-play text-[55px] mb-4"></i>
-            <h4 class="mt-3">4K AUFLÖSUNG</h4>
-        </div>
-        <div class="text-center mb-10">
-            <i class="fa fa-plug text-[55px] mb-4"></i>
-            <h4 class="mt-3"> PLUG & PLAY</h4>
-        </div>
-        <div class="text-center mb-10">
-            <i class="fa fa-child text-[55px] mb-4"></i>
-            <h4 class="mt-3">KINDERLEICHTE BEDIENUNG</h4>
-        </div>
-        <div class="text-center mb-10">
-            <i class="fa fa-paper-plane text-[55px] mb-4"></i>
-            <h4 class="mt-3">DHL-EXPRESS</h4>
-        </div>
-    </div>
-</section>
-
-<!-- Ausverkauft section -->
-
-<section class="container mx-auto px-5 pb-5 h-auto lg:px-20 lg:mt-10 ">
-   <div class="gird lg:grid grid-rows-2 lg:h-[500px]">
-    <div class="lg:flex gap-14">
-        <div>
-            <img src="./src/img/tv-box.jpg" alt="" >
-        </div>
-        <div class="mt-8 ">
-            <h3 class="text-red-500 font-semibold text-base border-b-2 border-zinc-100  pb-3 mb-4">Ausverkauft.</h3>
-            <p class=" text-gray-500 text-justify leading-7">Schließe VAVOO an Deinem Fernseher an und leg' los. Ganz so wie es sich gehört. Du benötigst von nun an lediglich VAVOO um alle Filme & Serien aus dem Internet direkt auf Deinem Fernseher zu streamen.
-              </p>
-              <p class=" text-gray-500 mt-4 text-justify leading-7"> Die Bedienung erfolgt durch einfache Pfeiltasten auf der Fernbedienung. Es ist ein Kinderspiel, das komplette Repertoire zu durchstöbern. Mit wenigen Klicks gelangst Du zum gewünschten Inhalt und kannst ihn sofort wiedergeben.</p>
-        </div>
-    </div>
-   </div>
-</section>
-
-
-
-    <!-- tesimonials -->
-    <section class="py-5 relative">
-      <div class="">
-        <div class="testimonials_overly h-full bg-[#fff]">
-
-     <!-- Slider main container -->
-<div class="swiper h-full">
-  <!-- Additional required wrapper -->
-  <div class="swiper-wrapper">
-    <!-- Slides -->
-    <div class="swiper-slide pb-10">
-     <div class="text-center pb-10 mt-[6%]">
-      <span class="text-[#000]">
-        <i class="fa-solid text-5xl fa-quote-right"></i>
-      </span>
-      <p
-        class="tesimonials_des text-[#333] font-light text-base py-10 leading-6 tracking-[2px]"
-      >
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus, libero?
-      </p>
-      <span class="text-[#000] font-semibold">Mamun Ethan</span>
-     </div>
-    </div>
-    <div class="swiper-slide"> <div class="text-center mt-[6%]">
-      <span class="text-[#000]">
-        <i class="fa-solid text-5xl fa-quote-right"></i>
-      </span>
-      <p
-        class="tesimonials_des text-[#000] font-light text-base py-10 leading-6 tracking-[2px]"
-      >
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus, libero?
-        <br>
-        sit amet consectetur adipisicing elit.
-        Necessitatibus, libero?
-      </p>
-      <span class="text-[#000] font-semibold">Emon Talukder</span>
-     </div></div>
-    <div class="swiper-slide"> <div class="text-center mt-[6%]">
-      <span class="text-[#000]">
-        <i class="fa-solid text-5xl fa-quote-right"></i>
-      </span>
-      <p
-        class="tesimonials_des text-[#000] font-light text-base py-10 leading-6 tracking-[2px]"
-      >
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Necessitatibus, libero?
-      </p>
-      <span class="text-[#000] font-semibold">jon doe</span>
-     </div></div>
-    ...
-  </div>
-  
-
-
-
-  
-</div>
-    </section>
-
+<h1 class="text-center text-2xl py-20">Login</h1>
     <!-- footer section -->
 
     <footer class="px-20 pt-14 bg-[#f7f7f7]">
@@ -350,8 +228,6 @@
         </p>
       </div>
     </footer>
-    <!-- swipper.js script -->
-    <script src="./src/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
