content added in vavoo,software pages

--- a/support.html
+++ b/support.html
@@ -140,7 +140,25 @@
         </div>
       </div>
     </section>
+   <!-- software section  -->
+   <section class=" align-middlemt-10 mb-10 pt-10 pb-5 bg-[#f7f7f7]">
+    <h1 class="px-4 font-semibold hover:text-orange-400 uppercase duration-300 text-[26px] text-main text-center tracking-[4px] mb-7" >
+    <a href="vavoo.html" >support</a> <span class="text-orange-500 text-2xl">.</span>
+    </h1>
+  </section>
 
+  <div class="mb-10">
+    <p class="px-4 text-[14px] mb-10 md:w-[700px] lg:w-[750px] lg:text-[16px]  text-justify m-auto leading-7 text-gray-500">
+      Für die werbefreie Nutzung der VAVOO Software ist VAVOO PRO erforderlich. Die Nutzung eines VAVOO PRO Accounts, auf mehreren Geräten gleichzeitig, ist nicht möglich.
+      </p>
+
+      <h1 class="px-4  text-[20px] mt-10 text-main text-center font-semibold tracking-[4px] mb-7" >
+          WÄHLE DIE GEWÜNSCHTE LAUFZEIT<span class="text-orange-500 text-2xl">.</span>
+          </h1>
+        
+          
+  </div>
+  
     <!-- footer section -->
 
     <footer class="px-20 pt-14 bg-[#f7f7f7]">
