pricing added in vavoo.html

--- a/vavoo.html
+++ b/vavoo.html
@@ -161,6 +161,30 @@
   </div>
   
 
+
+
+      <!-- pricing -->
+  <section class="pb-28">
+    <div class="container mx-auto px-10">
+
+     <div class=" grid md:grid-cols-2 md:mx-36 justify-center gap-x-10 text-center">
+      <div class="erin_jar mb-[10px] md:mb-[0px] p-10 bg-[#f9f9f9] border-solid border-2 ">
+          <h5 class="text-base font-semibold tracking-2 text-[#333]">EIN JAHR</h5>
+          <span class="text-[50px] font-extrabold text-[#333]">3,99 EUR</span>
+          <p class="text-xs  text-[#565555] mb-20">pro Monat, Rechnungssumme: 47,99 EUR</p>
+          <a class="bg-[#327AB7] py-2 px-5 uppercase text-[#fff] text-[14px]   font-semiboldtracking-[2px]" href="">Jetzt bezahlen</a>
+      </div>
+      <div class="erin_jar   p-10 bg-[#f9f9f9] border-solid border-2 ">
+        <h5 class="text-base font-semibold tracking-2 text-[#333]">EIN JAHR</h5>
+        <span class="text-[50px] font-extrabold text-[#333]">999 EUR</span>
+        <p class="text-xs  text-[#565555] mb-20">pro Monat, Rechnungssumme: 47,99 EUR</p>
+        <a class="bg-[#327AB7] py-2 px-5 uppercase text-[#fff] text-[14px]   font-semiboldtracking-[2px]" href="">Jetzt bezahlen</a>
+    </div>
+     </div>
+    </div>
+  </section>
+
+
     <!-- footer section -->
 
     <footer class="px-20 pt-14 bg-[#f7f7f7]">
