payment gate way added

--- a/vavoo.html
+++ b/vavoo.html
@@ -163,27 +163,100 @@
 
 
 
-      <!-- pricing -->
-  <section class="pb-28">
-    <div class="container mx-auto px-10">
+          <!-- pricing -->
+      <section class="pb-28">
+        <div class="container mx-auto px-10">
 
-     <div class=" grid md:grid-cols-2 md:mx-36 justify-center gap-x-10 text-center">
-      <div class="erin_jar mb-[10px] md:mb-[0px] p-10 bg-[#f9f9f9] border-solid border-2 ">
-          <h5 class="text-base font-semibold tracking-2 text-[#333]">EIN JAHR</h5>
-          <span class="text-[50px] font-extrabold text-[#333]">3,99 EUR</span>
-          <p class="text-xs  text-[#565555] mb-20">pro Monat, Rechnungssumme: 47,99 EUR</p>
-          <a class="bg-[#327AB7] py-2 px-5 uppercase text-[#fff] text-[14px]   font-semiboldtracking-[2px]" href="">Jetzt bezahlen</a>
+        <div class=" grid md:grid-cols-2 md:mx-36 justify-center gap-x-10 text-center">
+          <div class="erin_jar mb-[10px] md:mb-[0px] p-10 bg-[#f9f9f9] border-solid border-2 ">
+              <h5 class="text-base font-semibold tracking-2 text-[#333]">EIN JAHR</h5>
+              <span class="text-[50px] font-extrabold text-[#333]">3,99 EUR</span>
+              <p class="text-xs  text-[#565555] mb-20">pro Monat, Rechnungssumme: 47,99 EUR</p>
+              <a class="bg-[#327AB7] py-2 px-5 uppercase text-[#fff] text-[14px]   font-semiboldtracking-[2px]" href="">Jetzt bezahlen</a>
+          </div>
+          <div class="erin_jar   p-10 bg-[#f9f9f9] border-solid border-2 ">
+            <h5 class="text-base font-semibold tracking-2 text-[#333]">EIN JAHR</h5>
+            <span class="text-[50px] font-extrabold text-[#333]">999 EUR</span>
+            <p class="text-xs  text-[#565555] mb-20">pro Monat, Rechnungssumme: 47,99 EUR</p>
+            <a class="bg-[#327AB7] py-2 px-5 uppercase text-[#fff] text-[14px]   font-semiboldtracking-[2px]" href="">Jetzt bezahlen</a>
+        </div>
+        </div>
+        </div>
+      </section>
+
+
+      <!-- payment option -->
+
+    <section>
+      <div class="container mx-auto px-48">
+        <h1 class="px-4  text-[20px] mt-10 text-main text-center font-semibold tracking-[4px] mb-7" >
+          ZAHLUNGSMETHODE<span class="text-orange-500 text-2xl">.</span>
+          </h1>
+
+        <a href="#">
+          <div class="payment_methods pb-3 hover:cursor-pointer">
+            <div class="payment_method flex pb-3 px-3 justify-between items-center border border-solid">
+              <div class="img">
+                <img class="w-[150px]" src="./src/img/gateway-51-PayPal.png" alt="">
+              </div>
+              <div class="payment_name flex-1">
+                <p class="text-[14px] font-semibold">paypal</p>
+                <p class="text-[#888] text-xs tracking-[2px]">Schnell und einfach mit PayPal bezahlen.</p>
+              </div>
+              <div class="arrow">
+                <i class="fa-solid text-[#ddd] fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+        </a>
+         <a href="#">
+          <div class="payment_methods hover:cursor-pointer py-3">
+            <div class="payment_method flex pb-3 px-3 justify-between items-center border border-solid">
+              <div class="img">
+                <img class="w-[150px]" src="./src/img/gateway-48-gw-stripe.png" alt="">
+              </div>
+              <div class="payment_name pl-3 flex-1">
+                <p class="text-[14px] font-semibold ">paypal</p>
+                <p class="text-[#888] text-xs tracking-[2px]">Schnell und einfach mit PayPal bezahlen.</p>
+              </div>
+              <div class="arrow">
+                <i class="fa-solid text-[#ddd] fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+         </a>
+       <a href="#">   <div class="payment_methods hover:cursor-pointer py-3">
+        <div class="payment_method flex pb-3 px-3 justify-between items-center border border-solid">
+          <div class="img">
+            <img class="w-[150px]" src="./src/img/gateway-47-amazon-pay-2.png" alt="">
+          </div>
+          <div class="payment_name pl-3 flex-1">
+            <p class="text-[14px] font-semibold ">amazon</p>
+            <p class="text-[#888] text-xs tracking-[2px]">Schnell und einfach mit PayPal bezahlen.</p>
+          </div>
+          <div class="arrow">
+            <i class="fa-solid text-[#ddd] fa-arrow-right"></i>
+          </div>
+        </div>
+      </div></a>
+     <a href="#">
+      <div class="payment_methods hover:cursor-pointer py-3">
+        <div class="payment_method flex pb-3 px-3 justify-between items-center border border-solid">
+          <div class="img">
+            <img class="w-[150px]" src="./src/img/gateway-11-CashToCode.png" alt="">
+          </div>
+          <div class="payment_name pl-3 flex-1">
+            <p class="text-[14px] font-semibold ">amazon</p>
+            <p class="text-[#888] text-xs tracking-[2px]">Schnell und einfach mit PayPal bezahlen.</p>
+          </div>
+          <div class="arrow">
+            <i class="fa-solid text-[#ddd] fa-arrow-right"></i>
+          </div>
+        </div>
       </div>
-      <div class="erin_jar   p-10 bg-[#f9f9f9] border-solid border-2 ">
-        <h5 class="text-base font-semibold tracking-2 text-[#333]">EIN JAHR</h5>
-        <span class="text-[50px] font-extrabold text-[#333]">999 EUR</span>
-        <p class="text-xs  text-[#565555] mb-20">pro Monat, Rechnungssumme: 47,99 EUR</p>
-        <a class="bg-[#327AB7] py-2 px-5 uppercase text-[#fff] text-[14px]   font-semiboldtracking-[2px]" href="">Jetzt bezahlen</a>
-    </div>
-     </div>
-    </div>
-  </section>
-
+     </a>
+      </div>
+    </section>
 
     <!-- footer section -->
 
