payment gateway responsive issue fixed

--- a/vavoo.html
+++ b/vavoo.html
@@ -188,7 +188,7 @@
       <!-- payment option -->
 
     <section>
-      <div class="container mx-auto px-48">
+      <div class="container mx-auto px-5 md:px-48">
         <h1 class="px-4  text-[20px] mt-10 text-main text-center font-semibold tracking-[4px] mb-7" >
           ZAHLUNGSMETHODE<span class="text-orange-500 text-2xl">.</span>
           </h1>
